--- a/reports/testExecutionReport.html
+++ b/reports/testExecutionReport.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2019-07-10 15:06:53</span>
+					<span class='suite-started-time'>2019-07-24 13:54:42</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 57s+677ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 1m 16s+907ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 57s+677ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 1m 16s+907ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2019-07-10 15:05:55</span> 
+							<span class='panel-lead suite-started-time'>2019-07-24 13:53:26</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2019-07-10 15:06:53</span> 
+							<span class='panel-lead suite-ended-time'>2019-07-24 13:54:42</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='37153662-e65e-4bc8-9f08-6c08e3dfa10e'>
+										<li class='collection-item test displayed active pass ' extentid='b28444c4-6204-4bfd-af5d-486d98f93447'>
 											<div class='test-head'>
 												<span class='test-name'>Adding a New Tax Return </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -245,9 +245,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-07-10 15:05:55</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-07-10 15:06:53</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 57s+660ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-07-24 13:53:26</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-07-24 13:54:42</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 16s+882ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,88 +264,128 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:05:56</td>
+																	<td class='timestamp'>13:53:27</td>
 																	<td class='step-details'>Browser Maximized</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:14</td>
+																	<td class='timestamp'>13:53:41</td>
 																	<td class='step-details'>New city added</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:16</td>
+																	<td class='timestamp'>13:53:43</td>
 																	<td class='step-details'>City Edited Sucessfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:21</td>
+																	<td class='timestamp'>13:53:48</td>
+																	<td class='step-details'>City Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:53:52</td>
 																	<td class='step-details'>New Employer added Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:24</td>
+																	<td class='timestamp'>13:53:56</td>
 																	<td class='step-details'>New Employer Editted Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:28</td>
+																	<td class='timestamp'>13:53:58</td>
+																	<td class='step-details'>Employer Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:54:02</td>
 																	<td class='step-details'>New Care provider added successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:31</td>
+																	<td class='timestamp'>13:54:04</td>
 																	<td class='step-details'>Care provider editted successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:33</td>
+																	<td class='timestamp'>13:54:07</td>
+																	<td class='step-details'>Care Provider Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:54:09</td>
 																	<td class='step-details'>Refferrals added successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:34</td>
+																	<td class='timestamp'>13:54:10</td>
 																	<td class='step-details'>Refferrals editted successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:37</td>
+																	<td class='timestamp'>13:54:14</td>
+																	<td class='step-details'>Referrals Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:54:16</td>
 																	<td class='step-details'>Donee added successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:40</td>
+																	<td class='timestamp'>13:54:19</td>
 																	<td class='step-details'>Donee editted successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:42</td>
+																	<td class='timestamp'>13:54:21</td>
+																	<td class='step-details'>Donee Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:54:23</td>
 																	<td class='step-details'>Bank RTN added successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:44</td>
+																	<td class='timestamp'>13:54:25</td>
 																	<td class='step-details'>Bank RTN editted successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:46</td>
+																	<td class='timestamp'>13:54:27</td>
+																	<td class='step-details'>Bank RTN Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:54:29</td>
 																	<td class='step-details'>New Occupation added successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:47</td>
+																	<td class='timestamp'>13:54:31</td>
 																	<td class='step-details'>Occupation  editted successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:51</td>
+																	<td class='timestamp'>13:54:33</td>
+																	<td class='step-details'>Occupations Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:54:36</td>
 																	<td class='step-details'>New Educational Institution  added  successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:53</td>
+																	<td class='timestamp'>13:54:38</td>
 																	<td class='step-details'>Educational Institution editted  successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:54:40</td>
+																	<td class='step-details'>Educational Institute Deleted Successfully</td>
 																</tr>
 														</tbody>
 													</table>
