--- a/reports/testExecutionReport.html
+++ b/reports/testExecutionReport.html
@@ -53,11 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-<<<<<<< HEAD
-					<span class='suite-started-time'>2019-07-10 10:17:50</span>
-=======
-					<span class='suite-started-time'>2019-07-10 15:06:53</span>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
+					<span class='suite-started-time'>2019-07-22 11:19:36</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -87,41 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-<<<<<<< HEAD
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 14s+329ms</span> 
-=======
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 57s+677ms</span> 
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 33s+944ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-<<<<<<< HEAD
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 14s+329ms</span> 
-=======
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 57s+677ms</span> 
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 33s+944ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-<<<<<<< HEAD
-							<span class='panel-lead suite-started-time'>2019-07-10 10:17:36</span> 
-=======
-							<span class='panel-lead suite-started-time'>2019-07-10 15:05:55</span> 
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
+							<span class='panel-lead suite-started-time'>2019-07-22 11:19:02</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-<<<<<<< HEAD
-							<span class='panel-lead suite-ended-time'>2019-07-10 10:17:50</span> 
-=======
-							<span class='panel-lead suite-ended-time'>2019-07-10 15:06:53</span> 
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
+							<span class='panel-lead suite-ended-time'>2019-07-22 11:19:36</span> 
 						</div> 
 					</div>
 				</div>
@@ -257,11 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-<<<<<<< HEAD
-										<li class='collection-item test displayed active pass ' extentid='cc732a40-f3a4-4881-bffd-4b1666df3682'>
-=======
-										<li class='collection-item test displayed active pass ' extentid='37153662-e65e-4bc8-9f08-6c08e3dfa10e'>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
+										<li class='collection-item test displayed active pass ' extentid='fa93b925-8e32-4f55-a705-3fa71abc2c92'>
 											<div class='test-head'>
 												<span class='test-name'>Adding a New Tax Return </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -269,15 +245,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-<<<<<<< HEAD
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-07-10 10:17:36</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-07-10 10:17:50</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 14s+64ms</span>
-=======
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-07-10 15:05:55</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-07-10 15:06:53</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 57s+660ms</span>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-07-22 11:19:02</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-07-22 11:19:36</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 33s+353ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -294,97 +264,23 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-<<<<<<< HEAD
-																	<td class='timestamp'>10:17:37</td>
-=======
-																	<td class='timestamp'>15:05:56</td>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
+																	<td class='timestamp'>11:19:04</td>
 																	<td class='step-details'>Browser Maximized</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-<<<<<<< HEAD
-																	<td class='timestamp'>10:17:46</td>
-																	<td class='step-details'>Login Positive testcase passed</td>
-=======
-																	<td class='timestamp'>15:06:14</td>
+																	<td class='timestamp'>11:19:22</td>
 																	<td class='step-details'>New city added</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:16</td>
+																	<td class='timestamp'>11:19:25</td>
 																	<td class='step-details'>City Edited Sucessfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:21</td>
-																	<td class='step-details'>New Employer added Successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:24</td>
-																	<td class='step-details'>New Employer Editted Successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:28</td>
-																	<td class='step-details'>New Care provider added successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:31</td>
-																	<td class='step-details'>Care provider editted successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:33</td>
-																	<td class='step-details'>Refferrals added successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:34</td>
-																	<td class='step-details'>Refferrals editted successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:37</td>
-																	<td class='step-details'>Donee added successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:40</td>
-																	<td class='step-details'>Donee editted successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:42</td>
-																	<td class='step-details'>Bank RTN added successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:44</td>
-																	<td class='step-details'>Bank RTN editted successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:46</td>
-																	<td class='step-details'>New Occupation added successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:47</td>
-																	<td class='step-details'>Occupation  editted successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:51</td>
-																	<td class='step-details'>New Educational Institution  added  successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>15:06:53</td>
-																	<td class='step-details'>Educational Institution editted  successfully</td>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
+																	<td class='timestamp'>11:19:36</td>
+																	<td class='step-details'>City Deleted Successfully</td>
 																</tr>
 														</tbody>
 													</table>
