Interview page objects created

--- a/test-output/old/index.html
+++ b/test-output/old/index.html
@@ -4,18 +4,6 @@
 </head><body>
 <h2><p align='center'>Test results</p></h2>
 <table border='1' width='100%' class='main-page'><tr><th>Suite</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>testng.xml</th></tr>
-<<<<<<< HEAD
-<tr align='center' class='invocation-failed'><td><em>Total</em></td><td><em>42</em></td><td><em>1</em></td><td><em>0</em></td><td>&nbsp;</td></tr>
-<tr align='center' class='invocation-failed'><td><a href='Suite2/index.html'>Suite2</a></td>
-<td>42</td><td>1</td><td>0</td><td><a href='Suite2/testng.xml.html'>Link</a></td></tr></table></body></html>
-=======
-<<<<<<< HEAD
-<tr align='center' class='invocation-failed'><td><em>Total</em></td><td><em>1</em></td><td><em>1</em></td><td><em>0</em></td><td>&nbsp;</td></tr>
-<tr align='center' class='invocation-failed'><td><a href='Suite2/index.html'>Suite2</a></td>
-<td>1</td><td>1</td><td>0</td><td><a href='Suite2/testng.xml.html'>Link</a></td></tr></table></body></html>
-=======
-<tr align='center' class='invocation-passed'><td><em>Total</em></td><td><em>37</em></td><td><em>0</em></td><td><em>0</em></td><td>&nbsp;</td></tr>
-<tr align='center' class='invocation-passed'><td><a href='Suite2/index.html'>Suite2</a></td>
-<td>37</td><td>0</td><td>0</td><td><a href='Suite2/testng.xml.html'>Link</a></td></tr></table></body></html>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
+<tr align='center' class='invocation-passed'><td><em>Total</em></td><td><em>12</em></td><td><em>0</em></td><td><em>0</em></td><td>&nbsp;</td></tr>
+<tr align='center' class='invocation-passed'><td><a href='Default suite/index.html'>Default suite</a></td>
+<td>12</td><td>0</td><td>0</td><td><a href='Default suite/testng.xml.html'>Link</a></td></tr></table></body></html>
