--- a/reports/testExecutionReport.html
+++ b/reports/testExecutionReport.html
@@ -53,15 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-<<<<<<< HEAD
-					<span class='suite-started-time'>2019-07-24 13:54:42</span>
-=======
-<<<<<<< HEAD
-					<span class='suite-started-time'>2019-07-10 10:17:50</span>
-=======
-					<span class='suite-started-time'>2019-07-10 15:06:53</span>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
+					<span class='suite-started-time'>2019-08-20 09:02:01</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -91,57 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-<<<<<<< HEAD
-							<span class='suite-total-time-current-value panel-lead'>0h 1m 16s+907ms</span> 
-=======
-<<<<<<< HEAD
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 14s+329ms</span> 
-=======
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 57s+677ms</span> 
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
+							<span class='suite-total-time-current-value panel-lead'>0h 1m 35s+762ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-<<<<<<< HEAD
-							<span class='suite-total-time-overall-value panel-lead'>0h 1m 16s+907ms</span> 
-=======
-<<<<<<< HEAD
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 14s+329ms</span> 
-=======
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 57s+677ms</span> 
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
+							<span class='suite-total-time-overall-value panel-lead'>0h 1m 35s+762ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-<<<<<<< HEAD
-							<span class='panel-lead suite-started-time'>2019-07-24 13:53:26</span> 
-=======
-<<<<<<< HEAD
-							<span class='panel-lead suite-started-time'>2019-07-10 10:17:36</span> 
-=======
-							<span class='panel-lead suite-started-time'>2019-07-10 15:05:55</span> 
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
+							<span class='panel-lead suite-started-time'>2019-08-20 09:00:25</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-<<<<<<< HEAD
-							<span class='panel-lead suite-ended-time'>2019-07-24 13:54:42</span> 
-=======
-<<<<<<< HEAD
-							<span class='panel-lead suite-ended-time'>2019-07-10 10:17:50</span> 
-=======
-							<span class='panel-lead suite-ended-time'>2019-07-10 15:06:53</span> 
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
+							<span class='panel-lead suite-ended-time'>2019-08-20 09:02:01</span> 
 						</div> 
 					</div>
 				</div>
@@ -208,19 +168,19 @@
 								<tbody>
 										<tr>
 											<td>User Name</td>
-											<td>ssreenivasan</td>
+											<td>nmenon</td>
 										</tr>
 										<tr>
 											<td>OS</td>
-											<td>Windows Server 2012</td>
+											<td>Windows 10</td>
 										</tr>
 										<tr>
 											<td>Java Version</td>
-											<td>1.8.0_171</td>
+											<td>1.8.0_181</td>
 										</tr>
 										<tr>
 											<td>Host Name</td>
-											<td>qaint</td>
+											<td>coyote</td>
 										</tr>
 								</tbody>
 							</table>
@@ -245,6 +205,7 @@
 								<ul id='tests-toggle' class='dropdown-content'>
 									<li class='pass'><a href='#!'>Pass</a></li>
 									<li class='fail'><a href='#!'>Fail</a></li>
+										<li class='error'><a href='#!'>Error</a></li>
 									<li class='skip'><a href='#!'>Skip</a></li>
 									<li class='divider'></li>
 									<li class='clear'><a href='#!'>Clear Filters</a></li>
@@ -277,37 +238,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-<<<<<<< HEAD
-										<li class='collection-item test displayed active pass ' extentid='b28444c4-6204-4bfd-af5d-486d98f93447'>
-=======
-<<<<<<< HEAD
-										<li class='collection-item test displayed active pass ' extentid='cc732a40-f3a4-4881-bffd-4b1666df3682'>
-=======
-										<li class='collection-item test displayed active pass ' extentid='37153662-e65e-4bc8-9f08-6c08e3dfa10e'>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
+										<li class='collection-item test displayed active error ' extentid='676cae6e-a486-41b9-969e-015091604b5c'>
 											<div class='test-head'>
 												<span class='test-name'>Adding a New Tax Return </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='test-status label right outline capitalize error'>error</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-<<<<<<< HEAD
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-07-24 13:53:26</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-07-24 13:54:42</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 16s+882ms</span>
-=======
-<<<<<<< HEAD
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-07-10 10:17:36</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-07-10 10:17:50</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 14s+64ms</span>
-=======
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-07-10 15:05:55</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-07-10 15:06:53</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 57s+660ms</span>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-08-20 09:00:25</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-08-20 09:02:01</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 35s+426ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -324,145 +265,68 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-<<<<<<< HEAD
-																	<td class='timestamp'>13:53:27</td>
-=======
-<<<<<<< HEAD
-																	<td class='timestamp'>10:17:37</td>
-=======
-																	<td class='timestamp'>15:05:56</td>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
+																	<td class='timestamp'>09:00:26</td>
 																	<td class='step-details'>Browser Maximized</td>
 																</tr>
 																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-<<<<<<< HEAD
-																	<td class='timestamp'>13:53:41</td>
-=======
-<<<<<<< HEAD
-																	<td class='timestamp'>10:17:46</td>
-																	<td class='step-details'>Login Positive testcase passed</td>
-=======
-																	<td class='timestamp'>15:06:14</td>
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
-																	<td class='step-details'>New city added</td>
+																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
+																	<td class='timestamp'>09:00:42</td>
+																	<td class='step-details'>Error in Login Positive</td>
+																</tr>
+																<tr>
+																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
+																	<td class='timestamp'>09:00:47</td>
+																	<td class='step-details'>Error in Create new appointment</td>
+																</tr>
+																<tr>
+																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
+																	<td class='timestamp'>09:00:49</td>
+																	<td class='step-details'>Error in Create Second appointment</td>
+																</tr>
+																<tr>
+																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
+																	<td class='timestamp'>09:01:00</td>
+																	<td class='step-details'>Error in Update appointment</td>
+																</tr>
+																<tr>
+																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
+																	<td class='timestamp'>09:01:10</td>
+																	<td class='step-details'>Error in Delete appointment</td>
+																</tr>
+																<tr>
+																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
+																	<td class='timestamp'>09:01:21</td>
+																	<td class='step-details'>Error in Delete Second Appointment</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:53:43</td>
-																	<td class='step-details'>City Edited Sucessfully</td>
+																	<td class='timestamp'>09:01:26</td>
+																	<td class='step-details'>New Message Sent passed</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:53:48</td>
-																	<td class='step-details'>City Deleted Successfully</td>
+																	<td class='timestamp'>09:01:29</td>
+																	<td class='step-details'>New Message Reply passed</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:53:52</td>
-																	<td class='step-details'>New Employer added Successfully</td>
+																	<td class='timestamp'>09:01:32</td>
+																	<td class='step-details'>Delete Message Passed</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:53:56</td>
-																	<td class='step-details'>New Employer Editted Successfully</td>
+																	<td class='timestamp'>09:01:37</td>
+																	<td class='step-details'>Check print Passed</td>
 																</tr>
 																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:53:58</td>
-																	<td class='step-details'>Employer Deleted Successfully</td>
+																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
+																	<td class='timestamp'>09:01:49</td>
+																	<td class='step-details'>Error in Check Register</td>
 																</tr>
 																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:02</td>
-																	<td class='step-details'>New Care provider added successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:04</td>
-																	<td class='step-details'>Care provider editted successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:07</td>
-																	<td class='step-details'>Care Provider Deleted Successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:09</td>
-																	<td class='step-details'>Refferrals added successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:10</td>
-																	<td class='step-details'>Refferrals editted successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:14</td>
-																	<td class='step-details'>Referrals Deleted Successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:16</td>
-																	<td class='step-details'>Donee added successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:19</td>
-																	<td class='step-details'>Donee editted successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:21</td>
-																	<td class='step-details'>Donee Deleted Successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:23</td>
-																	<td class='step-details'>Bank RTN added successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:25</td>
-																	<td class='step-details'>Bank RTN editted successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:27</td>
-																	<td class='step-details'>Bank RTN Deleted Successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:29</td>
-																	<td class='step-details'>New Occupation added successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:31</td>
-																	<td class='step-details'>Occupation  editted successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:33</td>
-																	<td class='step-details'>Occupations Deleted Successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:36</td>
-																	<td class='step-details'>New Educational Institution  added  successfully</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:38</td>
-																	<td class='step-details'>Educational Institution editted  successfully</td>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:54:40</td>
-																	<td class='step-details'>Educational Institute Deleted Successfully</td>
+																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
+																	<td class='timestamp'>09:02:00</td>
+																	<td class='step-details'>Error in Check Register</td>
 																</tr>
 														</tbody>
 													</table>
