--- a/test-output/old/Suite2/classes.html
+++ b/test-output/old/Suite2/classes.html
@@ -4,8 +4,6 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<<<<<<< HEAD
-=======
 <td>clo.AccountSettings</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -33,15 +31,19 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>switchYear</td>
+<td>changePassword</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>changePassword</td>
+<td>switchYear</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>login</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -67,15 +69,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>dbDeleteEmployer</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>dbEditCity</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>dbaddOccupations</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>dbDeleteEmployer</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -161,6 +163,10 @@
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>login</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
@@ -174,7 +180,6 @@
 <td>teardown</td>
 <td>&nbsp;</td></tr>
 <tr>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
 <td>clo.LoginPage</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -182,22 +187,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<td>updateAppointment</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>createApptSameTime</td>
-=======
-<td>loginPositive</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<td>loginNegative</td>
-=======
-<td>checksReadyToPrint</td>
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
+<td>updateAppointment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -237,12 +231,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
 <td>newMessageSent</td>
-=======
-<td>deleteSecondAppointment</td>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
