--- a/test-output/old/Suite2/toc.html
+++ b/test-output/old/Suite2/toc.html
@@ -9,13 +9,8 @@
 <table border='1' width='100%'>
 <tr valign='top'>
 <td>1 test</td>
-<<<<<<< HEAD
 <td><a target='mainFrame' href='classes.html'>3 classes</a></td>
 <td>43 methods:<br/>
-=======
-<td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>2 methods:<br/>
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -25,17 +20,9 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-skipped'>
 <tr><td>
-<<<<<<< HEAD
-<table style='width: 100%'><tr><td valign='top'>Test2 (42/1/0)</td><td valign='top' align='right'>
-=======
-<<<<<<< HEAD
-<table style='width: 100%'><tr><td valign='top'>Test2 (1/1/0)</td><td valign='top' align='right'>
-=======
-<table style='width: 100%'><tr><td valign='top'>Test2 (37/0/0)</td><td valign='top' align='right'>
->>>>>>> a1df837363b8e6e6d749d7f5f54b0b34e42bf6e7
->>>>>>> 2fc615bc5fffadca6d1274b1ebf27701d10d798c
+<table style='width: 100%'><tr><td valign='top'>Test2 (12/0/31)</td><td valign='top' align='right'>
   <a href='Test2.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
