added calendar past time

--- a/reports/testExecutionReport.html
+++ b/reports/testExecutionReport.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2019-08-20 09:02:01</span>
+					<span class='suite-started-time'>2019-08-28 13:29:46</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 1m 35s+762ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 1m 11s+670ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 1m 35s+762ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 1m 11s+670ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2019-08-20 09:00:25</span> 
+							<span class='panel-lead suite-started-time'>2019-08-28 13:28:34</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2019-08-20 09:02:01</span> 
+							<span class='panel-lead suite-ended-time'>2019-08-28 13:29:46</span> 
 						</div> 
 					</div>
 				</div>
@@ -205,7 +205,6 @@
 								<ul id='tests-toggle' class='dropdown-content'>
 									<li class='pass'><a href='#!'>Pass</a></li>
 									<li class='fail'><a href='#!'>Fail</a></li>
-										<li class='error'><a href='#!'>Error</a></li>
 									<li class='skip'><a href='#!'>Skip</a></li>
 									<li class='divider'></li>
 									<li class='clear'><a href='#!'>Clear Filters</a></li>
@@ -238,17 +237,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active error ' extentid='676cae6e-a486-41b9-969e-015091604b5c'>
+										<li class='collection-item test displayed active pass ' extentid='c4a3af6b-63d6-47f4-b45c-9a515953d563'>
 											<div class='test-head'>
 												<span class='test-name'>Adding a New Tax Return </span>
-												<span class='test-status label right outline capitalize error'>error</span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-08-20 09:00:25</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-08-20 09:02:01</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 35s+426ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-08-28 13:28:34</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-08-28 13:29:46</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 11s+654ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -265,68 +264,128 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>09:00:26</td>
+																	<td class='timestamp'>13:28:35</td>
 																	<td class='step-details'>Browser Maximized</td>
 																</tr>
 																<tr>
-																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
-																	<td class='timestamp'>09:00:42</td>
-																	<td class='step-details'>Error in Login Positive</td>
-																</tr>
-																<tr>
-																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
-																	<td class='timestamp'>09:00:47</td>
-																	<td class='step-details'>Error in Create new appointment</td>
-																</tr>
-																<tr>
-																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
-																	<td class='timestamp'>09:00:49</td>
-																	<td class='step-details'>Error in Create Second appointment</td>
-																</tr>
-																<tr>
-																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
-																	<td class='timestamp'>09:01:00</td>
-																	<td class='step-details'>Error in Update appointment</td>
-																</tr>
-																<tr>
-																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
-																	<td class='timestamp'>09:01:10</td>
-																	<td class='step-details'>Error in Delete appointment</td>
-																</tr>
-																<tr>
-																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
-																	<td class='timestamp'>09:01:21</td>
-																	<td class='step-details'>Error in Delete Second Appointment</td>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:28:47</td>
+																	<td class='step-details'>New city added</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>09:01:26</td>
-																	<td class='step-details'>New Message Sent passed</td>
+																	<td class='timestamp'>13:28:49</td>
+																	<td class='step-details'>City Edited Sucessfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>09:01:29</td>
-																	<td class='step-details'>New Message Reply passed</td>
+																	<td class='timestamp'>13:28:53</td>
+																	<td class='step-details'>City Deleted Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>09:01:32</td>
-																	<td class='step-details'>Delete Message Passed</td>
+																	<td class='timestamp'>13:28:57</td>
+																	<td class='step-details'>New Employer added Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>09:01:37</td>
-																	<td class='step-details'>Check print Passed</td>
+																	<td class='timestamp'>13:29:00</td>
+																	<td class='step-details'>New Employer Editted Successfully</td>
 																</tr>
 																<tr>
-																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
-																	<td class='timestamp'>09:01:49</td>
-																	<td class='step-details'>Error in Check Register</td>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:03</td>
+																	<td class='step-details'>Employer Deleted Successfully</td>
 																</tr>
 																<tr>
-																	<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
-																	<td class='timestamp'>09:02:00</td>
-																	<td class='step-details'>Error in Check Register</td>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:06</td>
+																	<td class='step-details'>New Care provider added successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:08</td>
+																	<td class='step-details'>Care provider editted successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:10</td>
+																	<td class='step-details'>Care Provider Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:12</td>
+																	<td class='step-details'>Refferrals added successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:14</td>
+																	<td class='step-details'>Refferrals editted successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:16</td>
+																	<td class='step-details'>Referrals Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:19</td>
+																	<td class='step-details'>Donee added successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:21</td>
+																	<td class='step-details'>Donee editted successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:24</td>
+																	<td class='step-details'>Donee Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:25</td>
+																	<td class='step-details'>Bank RTN added successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:27</td>
+																	<td class='step-details'>Bank RTN editted successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:29</td>
+																	<td class='step-details'>Bank RTN Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:31</td>
+																	<td class='step-details'>New Occupation added successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:32</td>
+																	<td class='step-details'>Occupation  editted successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:35</td>
+																	<td class='step-details'>Occupations Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:37</td>
+																	<td class='step-details'>New Educational Institution  added  successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:39</td>
+																	<td class='step-details'>Educational Institution editted  successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>13:29:41</td>
+																	<td class='step-details'>Educational Institute Deleted Successfully</td>
 																</tr>
 														</tbody>
 													</table>
