--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,30 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:01:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksReadyToPrint()[pri:12, instance:clo.LoginPage@3c46e67a]">checksReadyToPrint</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.PasttimeAppointment()[pri:7, instance:clo.LoginPage@3c46e67a]">PasttimeAppointment</td> 
   <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:01:37</td>   <td>4874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksRegister()[pri:13, instance:clo.LoginPage@3c46e67a]">checksRegister</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:54</td>   <td>15190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksReadyToPrint()[pri:12, instance:clo.LoginPage@3c46e67a]">checksReadyToPrint</td> 
   <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:00:47</td>   <td>-45046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@3c46e67a]">createApptSameTime</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:58</td>   <td>20036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksRegister()[pri:13, instance:clo.LoginPage@3c46e67a]">checksRegister</td> 
   <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:00:42</td>   <td>-50157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@3c46e67a]">createNewAppointment</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:30</td>   <td>-8321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@3c46e67a]">createApptSameTime</td> 
   <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:01:00</td>   <td>-31973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@3c46e67a]">deleteAppointment</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:23</td>   <td>-15296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@3c46e67a]">createNewAppointment</td> 
   <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:01:30</td>   <td>-2335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:11, instance:clo.LoginPage@3c46e67a]">deleteMessage</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:42</td>   <td>3513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:8, instance:clo.LoginPage@3c46e67a]">deleteAppointment</td> 
   <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:01:10</td>   <td>-21928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteSecondAppointment()[pri:8, instance:clo.LoginPage@3c46e67a]">deleteSecondAppointment</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:43</td>   <td>4667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteSecondAppointment()[pri:9, instance:clo.LoginPage@3c46e67a]">deleteSecondAppointment</td> 
   <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:00:22</td>   <td>-69585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@3c46e67a]">loginPositive</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:11</td>   <td>-27561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@3c46e67a]">loginPositive</td> 
   <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:01:26</td>   <td>-6185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:10, instance:clo.LoginPage@3c46e67a]">newMessageReply</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:50</td>   <td>11408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:11, instance:clo.LoginPage@3c46e67a]">newMessageReply</td> 
   <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:01:21</td>   <td>-10900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:9, instance:clo.LoginPage@3c46e67a]">newMessageSent</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:45</td>   <td>6805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:10, instance:clo.LoginPage@3c46e67a]">newMessageSent</td> 
   <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:02:00</td>   <td>28614</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPage.teardown()[pri:0, instance:clo.LoginPage@3c46e67a]">&lt;&lt;teardown</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:22:07</td>   <td>28427</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPage.teardown()[pri:0, instance:clo.LoginPage@3c46e67a]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:00:49</td>   <td>-42997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@3c46e67a]">updateAppointment</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/20 09:01:49</td>   <td>17582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.voidCheck()[pri:14, instance:clo.LoginPage@3c46e67a]">voidCheck</td> 
+<tr bgcolor="bd7b6a">  <td>19/08/28 13:22:05</td>   <td>26654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.voidCheck()[pri:14, instance:clo.LoginPage@3c46e67a]">voidCheck</td> 
   <td>main@978508707</td>   <td></td> </tr>
 </table>
